# ESP32-FireTV-Remote-Bridge

./: CMakeLists.txt  LICENSE  README.md  firetv_remote2mqtt.c  readme.md  sdkconfig  test_bridge.c
